2.16.0:

2009-03-16  Murray Cumming  <murrayc@murrayc.com>

	* docs/reference/Makefile.am: Break the html and devhelp install/uninstall 
	rules up and generally base them on what is now in pangomm, thanks to 
	Theppitak Karoonboonyanan, to fix the distcheck.

2009-03-16  Murray Cumming  <murrayc@murrayc.com>

	* gdk/src/pixbufanimation.[hg|ccg]: create_from_file(): Throw an exception 
	when the GError is not null.
	
	* gtk/src/entry.[hg|ccg]: *_icon_* methods(): Rearrange parameters to make 
	these consistent and so we can have more default parameter values.
	
	* gdk/src/pixbufanimation.hg:
	* gdk/src/pixbufanimationiter.hg:
	* gdk/src/dragcontext.hg:
	* gtk/src/accelgroup.hg:
	* gtk/src/enums.hg:
	* gtk/src/iconset.hg:
	* gtk/src/printoperationpreview.hg: Dealt with some documentation TODOs.

2009-03-12  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/entry.hg:
	* gtk/src/style.hg:
	* gtk/src/gtk_signals.defs: Fix typos to fix the build.

	* gtk/src/settings.hg: Correct the color-hash property name so that that 
	API is really generated.
	
2009-03-12  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/gtk_methods.defs: Regenerated.
	* gtk/src/style.hg: Added get_style_property_value() and 
	get_style_property<>().
	
	* gtk/src/gtk_signals.defs: Hand-correct the definitions for the 
	GtkEntry::icon-press and icon-release signals.
	* gtk/src/entry.hg: Added icon_press and icon_release signals.

2009-03-09  Murray Cumming  <murrayc@murrayc.com>

	* gdk/src/gdk_docs.xml:
	* gtk/src/gtk_docs.xml: Regenerated with docextract_to_xml.py
	
	* gdk/src/gdk_methods.defs:
	* gdk/src/gdk_pixbuf.defs:
	* gtk/src/gtk_methods.defs: Regenerated with h2defs.py
	* gdk/src/drawable.hg:
	* gdk/src/gc.hg:

	* tools/m4/convert_gdk.m4:
	* gdk/src/region.hg:
	* gdk/src/window.hg:
	* gtk/src/activatable.hg:
	* gtk/src/entry.hg: Added conversions to deal with GTK+ making some 
	function parameters const.

2009-03-06  Daniel Elstner  <danielk@openismus.com>
