@@ -59,6 +59,11 @@ StockID& StockID::operator=(const StockID& other)
   return *this;
 }
 
+StockID::operator bool() const
+{
+  return !(id_.empty());
+}
+  
 bool StockID::equal(const StockID& rhs) const
 {
   // Do an exact per-byte comparison:
