@@ -1,3 +1,10 @@
+2009-03-17  Murray Cumming  <murrayc@murrayc.com>
+
+	* gtk/gtkmm/stockid.cc: Implement operator().
+	* gtk/src/textbuffer.ccg: Actually implement the const get_text(bool) 
+	method. These fix undefined symbol linker errors when people try to use 
+	these methods.
+
 2.16.0:
 
 2009-03-16  Murray Cumming  <murrayc@murrayc.com>
